--- a/A/IAPS_train.ipynb
+++ b/A/IAPS_train.ipynb
@@ -405,6 +405,8 @@
         "outputId": "ba86290d-8e0a-44a4-affd-8fb8b373bb4b"
       },
       "source": [
+        "# Red resnet de 34 capas entrenada con la base de datos ImageNet\n",
+        "# para clasificar la categoría a la que pertenecen\n",
         "learn = cnn_learner(data, models.resnet34)"
       ],
       "execution_count": null,
@@ -452,6 +454,8 @@
         "outputId": "af76f1b0-72e1-4b82-bc0e-6e6c50f1387b"
       },
       "source": [
+        "# Buscamos una tasa de aprendizaje (lr = learning rate) adecuada\n",
+        "# para reentrenar a la red\n",
         "learn.lr_find()\n",
         "learn.recorder.plot()"
       ],
@@ -594,6 +598,7 @@
         "id": "mIcxmIW_-wbb"
       },
       "source": [
+        "# Tasa de aprendizaje claramente anterior al punto en que empieza a aumentar el error (loss)\n",
         "lr = 1e-02"
       ],
       "execution_count": null,
@@ -610,6 +615,7 @@
         "outputId": "f0aedc32-2524-4e69-d311-28c3a441f097"
       },
       "source": [
+        "# Reentrenamos la red, 3 épocas\n",
         "learn.fit_one_cycle(3, slice(lr))"
       ],
       "execution_count": null,
@@ -670,6 +676,7 @@
         "outputId": "9cdcb9d6-a01a-4b36-bb56-915c4ccf686d"
       },
       "source": [
+        "# Tres más\n",
         "learn.fit_one_cycle(3, slice(lr))"
       ],
       "execution_count": null,
@@ -725,6 +732,7 @@
         "id": "CVZbL7Dj-85d"
       },
       "source": [
+        "# Grabamos el modelo\n",
         "learn.save(iaps_path/'stage_1')"
       ],
       "execution_count": null,
@@ -741,6 +749,7 @@
         "outputId": "d52056cd-052b-4d92-de2e-f256f4e02edc"
       },
       "source": [
+        "# Y vemos algunos resultados\n",
         "learn.show_results()"
       ],
       "execution_count": null,
